Baking speed regression with rigidbody simulation #47351

Closed
opened 2016-02-07 14:18:11 +01:00 by Martin Felke · 6 comments
Member

System Information
Linux Mint 17 64 bits, Geforce GTX 580, I7 2600, 16 GB RAM

Blender Version
Broken: 2.76.10 77197b2
Worked: 2.76b

Short description of error
Direct baking a rigidbody simulation consisting of a simple default cube takes 50 seconds now after pointcache baking system was changed to use the job system.
Before this change in 2.76b for example, this took only one second.
Plus the old baking function triggered frame change notifications (useful to monitor the baking process and make changes to sim during bake) while the new function doesnt.

Exact steps for others to reproduce the error
Just make the default cube an active rigidbody and in Scene properties, Rigid Body Cache hit Bake.

**System Information** Linux Mint 17 64 bits, Geforce GTX 580, I7 2600, 16 GB RAM **Blender Version** Broken: 2.76.10 77197b2 Worked: 2.76b **Short description of error** Direct baking a rigidbody simulation consisting of a simple default cube takes 50 seconds now after pointcache baking system was changed to use the job system. Before this change in 2.76b for example, this took only one second. Plus the old baking function triggered frame change notifications (useful to monitor the baking process and make changes to sim during bake) while the new function doesnt. **Exact steps for others to reproduce the error** Just make the default cube an active rigidbody and in Scene properties, Rigid Body Cache hit Bake.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Martin Felke 2016-02-07 14:18:11 +01:00
Author
Member

Added subscriber: @scorpion81

Added subscriber: @scorpion81

This issue was referenced by bd0223b8fe

This issue was referenced by bd0223b8fefe1bf21f9cd2b444256775b5540227

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

Fixed the slowness now, but frame change handlers seem to work properly for me: rb_bake_frame_change.blend

Fixed the slowness now, but frame change handlers seem to work properly for me: [rb_bake_frame_change.blend](https://archive.blender.org/developer/F280651/rb_bake_frame_change.blend)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47351
No description provided.